--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -16,12 +16,19 @@ version="4.0">
   </welcome-file-list>
   
   <servlet>
-  	<servlet-name>spring</servlet-name>
-  	<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
-  	<init-param>
-  		<param-name>contextConfiguration</param-name>
-  		<param-value>/WEB-INF/spring-servlet.xml</param-value>
-  	</init-param>
+    <servlet-name>spring</servlet-name>
+    <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+    <init-param>
+      <param-name>contextClass</param-name>
+      <param-value>
+        			org.springframework.web.context.support.AnnotationConfigWebApplicationContext
+    		</param-value>
+    </init-param>
+    <init-param>
+      <param-name>contextConfigLocation</param-name>
+      <param-value>com.capgemini.configuration</param-value>
+    </init-param>
+    <load-on-startup>1</load-on-startup>
   </servlet>
     	<servlet-mapping>
     	<servlet-name>spring</servlet-name>
